[TD-506] Implement Databricks connector (#423)

--- a/.custom/bump.cfg
+++ b/.custom/bump.cfg
@@ -1,3 +1,7 @@
+connectors/python/tabsdata_databricks/tabsdata_databricks/assets/manifest/RELEASE-NOTES
+connectors/python/tabsdata_databricks/tabsdata_databricks/assets/manifest/THIRD-PARTY
+connectors/python/tabsdata_databricks/tabsdata_databricks/assets/manifest/VERSION
+requirements-connector-databricks.txt
 connectors/python/tabsdata_mongodb/tabsdata_mongodb/assets/manifest/RELEASE-NOTES
 connectors/python/tabsdata_mongodb/tabsdata_mongodb/assets/manifest/THIRD-PARTY
 connectors/python/tabsdata_mongodb/tabsdata_mongodb/assets/manifest/VERSION
@@ -15,6 +19,7 @@ requirements/requirements-first-party.txt
 assets/manifest/THIRD-PARTY_connectors
 assets/manifest/VERSION
 client/td-sdk/tabsdata/assets/manifest/RELEASE-NOTES
+connectors/python/tabsdata_databricks/tabsdata_databricks/VERSION
 connectors/python/tabsdata_mongodb/tabsdata_mongodb/VERSION
 connectors/python/tabsdata_salesforce/tabsdata_salesforce/VERSION
 connectors/python/tabsdata_snowflake/tabsdata_snowflake/VERSION
