--- a/client/td-sdk/pytest.ini
+++ b/client/td-sdk/pytest.ini
@@ -7,6 +7,7 @@
 markers =
     chipset: test that might give false positives or negatives due to chipset behaviour (specially on numbers precision).
     config_resolver: tests for the config_resolver tool in tabsserver.
+    databricks: mark tests that require the tabsdata_databricks package.
     hashicorp: mark test as requiring a hashicorp vault docker container.
     integration: mark a test as a integration test.
     mariadb: mark test as requiring a mariadb docker container.
