--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,6 +7,7 @@
 # Third-party dev dependencies
 
 -r requirements/requirements-dev-third-party.txt
+-r connectors/python/tabsdata_databricks/requirements/requirements-dev-third-party.txt
 -r connectors/python/tabsdata_mongodb/requirements/requirements-dev-third-party.txt
 -r connectors/python/tabsdata_salesforce/requirements/requirements-dev-third-party.txt
 -r connectors/python/tabsdata_snowflake/requirements/requirements-dev-third-party.txt
@@ -14,6 +15,7 @@
 # Third-party dependencies
 
 -r requirements/requirements-third-party.txt
+-r connectors/python/tabsdata_databricks/requirements/requirements-third-party.txt
 -r connectors/python/tabsdata_mongodb/requirements/requirements-third-party.txt
 -r connectors/python/tabsdata_salesforce/requirements/requirements-third-party.txt
 -r connectors/python/tabsdata_snowflake/requirements/requirements-third-party.txt
