--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -207,6 +207,13 @@ jobs:
       SALESFORCE_PASSWORD: ${{ secrets.SALESFORCE_PASSWORD }}
       SALESFORCE_SECURITY_TOKEN: ${{ secrets.SALESFORCE_SECURITY_TOKEN }}
       SALESFORCE_USERNAME: ${{ secrets.SALESFORCE_USERNAME }}
+      TD_DATABRICKS_CATALOG: ${{ secrets.TD_DATABRICKS_CATALOG }}
+      TD_DATABRICKS_CLIENT_ID: ${{ secrets.TD_DATABRICKS_CLIENT_ID }}
+      TD_DATABRICKS_CLIENT_SECRET: ${{ secrets.TD_DATABRICKS_CLIENT_SECRET }}
+      TD_DATABRICKS_HOST: ${{ secrets.TD_DATABRICKS_HOST }}
+      TD_DATABRICKS_SCHEMA: ${{ secrets.TD_DATABRICKS_SCHEMA }}
+      TD_DATABRICKS_VOLUME: ${{ secrets.TD_DATABRICKS_VOLUME }}
+      TD_DATABRICKS_WAREHOUSE_NAME: ${{ secrets.TD_DATABRICKS_WAREHOUSE_NAME }}
       TD_SNOWFLAKE_ACCOUNT: ${{ secrets.TD_SNOWFLAKE_ACCOUNT }}
       TD_SNOWFLAKE_DATABASE: ${{ secrets.TD_SNOWFLAKE_DATABASE }}
       TD_SNOWFLAKE_PAT: ${{ secrets.TD_SNOWFLAKE_PAT }}
