--- a/expansions/polars/modules/ty-tableframe/pyproject.toml
+++ b/expansions/polars/modules/ty-tableframe/pyproject.toml
@@ -39,10 +39,12 @@ exclude_also = [
 profile = "black"
 known_first_party = [
     "tabsdata",
+    "tabsdata_databricks",
     "tabsdata_mongodb",
     "tabsdata_salesforce",
     "tabsdata_snowflake",
     "tests_tabsdata",
+    "tests_tabsdata_databricks",
     "tests_tabsdata_mongodb",
     "tests_tabsdata_salesforce",
     "tests_tabsdata_snowflake",
