--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ exclude_also = [
 profile = "black"
 known_first_party = [
     "tabsdata",
+    "tabsdata_databricks",
     "tabsdata_mongodb",
     "tabsdata_salesforce",
     "tabsdata_snowflake",
