--- a/requirements/requirements-dev-first-party.txt
+++ b/requirements/requirements-dev-first-party.txt
@@ -2,6 +2,7 @@
 # Copyright 2025 Tabs Data Inc.
 #
 
+tabsdata_databricks[deps]==0.9.7
 tabsdata_mongodb[deps]==0.9.7
 tabsdata_salesforce[deps]==0.9.7
 tabsdata_snowflake[deps]==0.9.7
