--- a/requirements/requirements-first-party.txt
+++ b/requirements/requirements-first-party.txt
@@ -2,6 +2,7 @@
 # Copyright 2025 Tabs Data Inc.
 #
 
+tabsdata_databricks==0.9.7
 tabsdata_mongodb==0.9.7
 tabsdata_salesforce==0.9.7
 tabsdata_snowflake==0.9.7
