[TD-507] Table sampling should support a SQL filter (#424)
* The table sample REST API has an optional query string `sql=`
    that can be used to do SQL on the table.
  * As with the current sample, the result is limitted to 1000
    rows.

--- a/.cargo/deny.toml
+++ b/.cargo/deny.toml
@@ -32,10 +32,12 @@ deny = [{ crate = "log", reason = "We use 'tracing' crate instead, which has equ
     "globset",
     "iana-time-zone",
     "ignore",
+    "jsonpath_lib_polars_vendor",
     "mio",
     "native-tls",
     "opentelemetry-appender-log",
     "reqwest",
+    "sqlparser",
     "sqlx-core",
     "sqlx-sqlite",
     "tracing",
