--- a/Cargo.toml
+++ b/Cargo.toml
@@ -431,7 +431,7 @@ version = "0.5.0"
 
 [workspace.dependencies.polars]
 version = "0.44.2"
-features = ["lazy", "parquet", "csv", "json", "polars-lazy", "streaming", "cloud", "aws", "azure", "gcp", "cloud_write"]
+features = ["lazy", "parquet", "csv", "json", "polars-lazy", "streaming", "cloud", "aws", "azure", "gcp", "cloud_write", "sql"]
 
 [workspace.dependencies.rand]
 version = "0.9.1"
