--- a/server/libraries/td-supervisor/Cargo.toml
+++ b/server/libraries/td-supervisor/Cargo.toml
@@ -100,6 +100,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 url = { workspace = true, features = ["serde"] }
+windows-sys = { workspace = true, features = ["Win32", "Win32_System_Threading"] }
 walkdir = { workspace = true }
 
 [dev-dependencies]
