[TD-516] Create all requirements for tabsdata (#433)

--- a/connectors/python/tabsdata_mongodb/pytest.ini
+++ b/connectors/python/tabsdata_mongodb/pytest.ini
@@ -6,17 +6,23 @@
 
 markers =
     chipset: test that might give false positives or negatives due to chipset behaviour (specially on numbers precision).
+    config_resolver: tests for the config_resolver tool in tabsserver.
+    databricks: mark tests that require the tabsdata_databricks package.
     hashicorp: mark test as requiring a hashicorp vault docker container.
     integration: mark a test as a integration test.
     mariadb: mark test as requiring a mariadb docker container.
     mongodb: mark tests that require the tabsdata_mongodb package.
+    mount_extractor: tests for the mount_extractor tool in tabsserver.
     mysql: mark test as requiring a mysql docker container.
     oracle: mark test as requiring a oracle docker container. Also, the Oracle Instant Client must be installed.
+    performance: mark tests that will be run in a purely performance environment. The
+        amount of records used in each test can be configured through the
+        --performance-size parameter, which defaults to 25000.
     postgres: mark test as requiring a postgresql docker container.
     requires_internet: mark those tests that require an Internet connection to be run.
     salesforce: mark tests that require the tabsdata_salesforce package.
-    slow: mark test as slow.
     snowflake: mark tests that require the tabsdata_snowflake package.
+    slow: mark test as slow.
     tableframe: mark a test that validates the TableFrame API.
 
 addopts = --tb=short
