--- a/Cargo.toml
+++ b/Cargo.toml
@@ -571,7 +571,7 @@ features = ["Win32", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Syst
 
 [workspace.dependencies.windows-sys]
 version = "0.60.2"
-features = ["Win32", "Win32_System_Threading"]
+features = ["Win32", "Win32_System_Threading", "Win32_System_Console"]
 
 [build-dependencies]
 
