--- a/server/libraries/td-process/Cargo.toml
+++ b/server/libraries/td-process/Cargo.toml
@@ -28,7 +28,7 @@ test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "td-build", "thiserror", "strum", "toml"]
+ignored = ["openssl", "td-build", "thiserror", "strum", "toml", "windows", "windows-sys"]
 
 # Build dependencies
 
@@ -44,7 +44,7 @@ ignored = ["openssl", "td-build", "thiserror", "strum", "toml"]
 
 td-build = { workspace = true }
 td-common = { workspace = true }
-    td-objects = { workspace = true }
+td-objects = { workspace = true }
 
 ## Macros
 
@@ -67,6 +67,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 windows = { workspace = true, features = ["Win32", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }
+windows-sys = { workspace = true, features = ["Win32", "Win32_System_Threading", "Win32_System_Console"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
