[TD-525] Databricks connector should use PAT instead of client_id/client_secret (#442)
* Changing authentication to use PAT instead client_id/client_secret.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -189,6 +189,7 @@ jobs:
       TD_DATABRICKS_CLIENT_SECRET: ${{ secrets.TD_DATABRICKS_CLIENT_SECRET }}
       TD_DATABRICKS_HOST: ${{ secrets.TD_DATABRICKS_HOST }}
       TD_DATABRICKS_SCHEMA: ${{ secrets.TD_DATABRICKS_SCHEMA }}
+      TD_DATABRICKS_TOKEN: ${{ secrets.TD_DATABRICKS_TOKEN }}
       TD_DATABRICKS_VOLUME: ${{ secrets.TD_DATABRICKS_VOLUME }}
       TD_DATABRICKS_WAREHOUSE_NAME: ${{ secrets.TD_DATABRICKS_WAREHOUSE_NAME }}
       TD_SNOWFLAKE_ACCOUNT: ${{ secrets.TD_SNOWFLAKE_ACCOUNT }}
