[TD-527] Importer last modify handling may leave gaps if loading different sets of files (#445)
* Replacing importer with transporter for importing files
  * Transporter uses a lastmod info state that keeps, for each URL pattern to import
    the lastmod timestamp imported as well as all the files that had that exact
    lastmod timestamp.
  * By keeping lastmod per URL pattern we cannot have gaps between different URL
    patterns as we keep the lastmod per URL pattern. This can happen because files
    for different URL patterns are read at differnet times.
  * By keeping all the files for the lastmod for a URL pattern we cannot have gaps
    in the same URL pattern in the scenario that several files are written to the
    filesystem at the same timestamp (write burst). As we keep the files we
    processed at lastmod, if the next time there are more file at the very same
    lastmod we can skip the ones we already saw.
  * Transporter, for importing, uses request/report files. Same as for copying out.

--- a/server/binaries/td-server/Cargo.toml
+++ b/server/binaries/td-server/Cargo.toml
@@ -34,7 +34,7 @@ name = "apiserver"
 path = "src/apiserver.rs"
 
 [[bin]]
-name = "importer"
+name = "_importer"
 path = "src/importer.rs"
 
 [[bin]]
