--- a/server/libraries/td-shuttle/Cargo.toml
+++ b/server/libraries/td-shuttle/Cargo.toml
@@ -64,10 +64,13 @@ td-process = { workspace = true }
 
 # External dependencies
 
+async-trait = { workspace = true }
+base64 = { workspace = true }
 bytes = { workspace = true }
 chrono = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 clap_derive = { workspace = true }
+derive_builder = { workspace = true }
 futures-util = { workspace = true }
 getset = { workspace = true }
 itertools = { workspace = true }
@@ -90,4 +93,3 @@ td-common = { workspace = true, features = ["td-test"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
-
