[TD-535] Logs endpoint name and cast filtering (#452)
- Added a new `LogsExtension` enum to filter logs by type (All, Err, Fn, Out, Td)
- Added support for filtering logs by worker retry/cast number
- Improved log file sorting to ensure consistent ordering (alphabetical in cast and rotation)
- Added several tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -483,6 +483,9 @@ version = "3.0.2"
 [workspace.dependencies.sysinfo]
 version = "0.35.2"
 
+[workspace.dependencies.temp-env]
+version = "0.3.6"
+
 [workspace.dependencies.tempfile]
 version = "3.20.0"
 
