--- a/requirements/requirements-third-party.txt
+++ b/requirements/requirements-third-party.txt
@@ -6,6 +6,7 @@ accessify==0.3.1
 base32hex==1.0.2
 click==8.1.8
 cloudpickle==3.1.1
+colorama==0.4.6
 connectorx==0.4.2
 filelock==3.18.0
 humanize==4.12.1
