--- a/Cargo.toml
+++ b/Cargo.toml
@@ -271,6 +271,9 @@ version = "0.1.0"
 [workspace.dependencies.axum-extra]
 version = "0.10.1"
 
+[workspace.dependencies.axum-server]
+version = "0.7.2"
+
 [workspace.dependencies.base64]
 version = "0.22.1"
 
@@ -447,6 +450,9 @@ version = "1.11.1"
 
 [workspace.dependencies.reqwest]
 version = "0.12.20"
+
+[workspace.dependencies.rustls]
+version = "0.23.28"
 
 [workspace.dependencies.rust-embed]
 version = "8.7.2"
