--- a/server/binaries/td-server/resources/profiles/internal/default/workspace/config/config.yaml
+++ b/server/binaries/td-server/resources/profiles/internal/default/workspace/config/config.yaml
@@ -91,6 +91,7 @@ controllers:
         parameters:
           - stdin-config: true
           - database-url: file://${TD_URI_REPOSITORY}/database/tabsdata.db
+          - ssl-folder: ${TD_PATH_INSTANCE}/workspace/config/ssl
         get-states:
           - state-type: blob
             state-key: apiserver-configuration
